array och foreach

--- a/inmatning/formular.html
+++ b/inmatning/formular.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="uppgift2-1.css">
 </head>
 <body>
-    <form action="./skript2-3.php" method="POST">
+    <form action="./skript.php" method="POST">
         <h2>Måla bakgrund</h2>
             <select name="bgFärg">
                 <option value="väljEn" selected>*välj en*</option>
