--- a/boarUF/boar/index.html
+++ b/boarUF/boar/index.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boar.se</title>
-    <link rel="stylesheet" href="boar.css">
+    <link rel="stylesheet" href="./css/boar.css">
     <script src="boar.js"></script>
 </head>
 <body>
-    <a href="../boar/boar.html"><img src="../bilder/boarlogo1.jpg" class="sticky" alt="logga med ett vildsvin"></a>
+    <a href="index.html"><img src="../bilder/boarlogo1.jpg" class="sticky" alt="logga med ett vildsvin"></a>
         <div class="dropdown-container">
             <div class="dropdown aktiv">
-                <a href="../boar/boar.html"><button class="dropbtn">Hem</ button></a>
+                <a href="index.html"><button class="dropbtn">Hem</button></a>
             </div>
             <div class="dropdown">
-                <a href="../boar/produkter.html"><button class="dropbtn">Produkter</button></a>
+                <a href="produkter.html"><button class="dropbtn">Produkter</button></a>
             </div>
             <div class="dropdown">
-                <a href="../boar/kontakt.html"><button class="dropbtn">Kontakt</button></a>
+                <a href="kontakt.html"><button class="dropbtn">Kontakt</button></a>
             </div> 
             <div class="dropdown">
-                <a href="../boar/om-oss.html"><button class="dropbtn">Om oss</button></a>
+                <a href="om-oss.html"><button class="dropbtn">Om oss</button></a>
             </div> 
     <!--    start av content -->
         </div>
@@ -34,11 +34,11 @@
                 <label>Köp 2 stycken utav denna tröjan och få en till på köpet.</label>
             </div>
         </div>
-
+        <p><a href="https://tyngre.se">BILDERNA ÄR ENDAST PROVISORISKA OCH ÄR EGENTLIGEN FRÅN TYNGRE.SE</a></p>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer class="grid-container">
             <div class="grid-item">
-                    <h4><a href="../boar/kontakt.html">Kontakt</a></h4>
+                    <h4><a href="kontakt.html">Kontakt</a></h4>
                 <img class="nummer" src="../bilder/nummer.PNG" alt="070 - 954 11 95">
                 <a href="mailto: boar.wear.uf@gmail.com">Email: boar.wear.uf@gmail.com</a>
             </div>
@@ -49,7 +49,7 @@
             </div>
             <div class="grid-item">
                     <h4>Boar UF</h4>
-                <p>Vi är ett UF-företag som brinner för sport och framförallt innebandy... <a href="../boar/om-oss.html">läs mer</a></p>
+                <p>Vi är ett UF-företag som brinner för sport och framförallt innebandy... <a href="om-oss.html">läs mer</a></p>
             </div>
     </footer>
 </body>
