tränat på att läsa kataloger och ifsatser

--- a/boarUF/boar/index.html
+++ b/boarUF/boar/index.html
@@ -34,7 +34,7 @@
                 <label>Köp 2 stycken utav denna tröjan och få en till på köpet.</label>
             </div>
         </div>
-        <p><a href="https://tyngre.se">BILDERNA ÄR ENDAST PROVISORISKA OCH ÄR EGENTLIGEN FRÅN TYNGRE.SE</a></p>
+        <p style="color: red;"><a href="https://tyngre.se">*OBS* BILDERNA ÄR ENDAST PROVISORISKA OCH ÄR EGENTLIGEN FRÅN TYNGRE.SE *OBS*</a></p>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer class="grid-container">
             <div class="grid-item">
