övet på texthantering, filhantering och funktioner

--- a/boarUF/boar/index.html
+++ b/boarUF/boar/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boar.se</title>
-    <link rel="stylesheet" href="./css/boar.css">
+    <link rel="stylesheet" href="../css/boar.css">
     <script src="boar.js"></script>
 </head>
 <body>
@@ -26,15 +26,14 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <img class="kläder" src="../bilder/Tyngre-T-Shirt-Indigo-Herr.jpg" alt="">
+                <img class="kläder" src="../bilder/tröja.PNG" alt="">
                 <label>Prova vår nya tröja med clima-cool teknink<label>
             </div>
             <div class="grid-item">
-                <img class="kläder" src="../bilder/Tyngre-T-Shirt-Svart-Guld-herr.jpg" alt="">
+                <img class="kläder" src="../bilder/t-tröja.PNG" alt="">
                 <label>Köp 2 stycken utav denna tröjan och få en till på köpet.</label>
             </div>
         </div>
-        <p style="color: red;"><a href="https://tyngre.se">*OBS* BILDERNA ÄR ENDAST PROVISORISKA OCH ÄR EGENTLIGEN FRÅN TYNGRE.SE *OBS*</a></p>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer class="grid-container">
             <div class="grid-item">
