vi har rättat prov2 och övat på filhantering

--- a/boarUF/boar/om-oss.html
+++ b/boarUF/boar/om-oss.html
@@ -26,7 +26,7 @@
         <!-- start av content -->
         <div class="kontainer">
             <h1>Om oss</h1>
-            <p>Vi är ett UF-företag som brinner för sport och framförallt innebandy. Vi har länge känt att utbudet på tränings kläder är för dåligt och framförallt kostar det alldeles för mycket. Så vi kommer att försöka lösa dessa problem genom att göra exakt det. Göra bra kläder som är snygga till ett bra pris. <br><br> Vi kommer att rikta in oss på lag eller folk som kommer att göra större beställningar men det finns även så att man kan köpa som privatperson. </p>
+            <p>Vi är ett UF-företag som brinner för sport och framförallt innebandy. Vi har länge känt att utbudet på träningskläder är för dåligt och framförallt kostar det alldeles för mycket. Vi kommer att försöka lösa dessa problem genom att designa snygga kläder till bra pris.<br><br> Vi kommer att rikta in oss på både lag eller folk som kommer att göra större beställningar men även privatpersoner.</p>
         </div>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer class="grid-container">
