--- a/boarUF/boar/produkter.html
+++ b/boarUF/boar/produkter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shopping Cart</title>
+    <title>Boarwear</title>
 
     <link rel="stylesheet" href="../css/boar.css" media="screen" title="no title" charset="utf-8">
     <script src="https://code.jquery.com/jquery-2.2.4.js" charset="utf-8"></script>
