tränat på objekt, spelflöden och e.key

--- a/boarUF/boar/kontakt.html
+++ b/boarUF/boar/kontakt.html
@@ -14,7 +14,7 @@
                 <a href="index.html"><button class="dropbtn">Hem</button></a>
             </div>
             <div class="dropdown">
-                <a href="produkter.html"><button class="dropbtn">Produkter</button></a>
+                <a href="produkter.php"><button class="dropbtn">Produkter</button></a>
             </div>
             <div class="dropdown aktiv">
                 <a href="kontakt.html"><button class="dropbtn">Kontakt</button></a>
