--- a/javascript/canvas/canvas6.html
+++ b/javascript/canvas/canvas6.html
@@ -46,7 +46,7 @@
         var dx = 1;
         var dy = 10;
         function animate() {
-            /* ctx.clearRect(0,0,800,600) */
+            ctx.clearRect(0,0,800,600)
             ritaboll();
 
             
