övat på nån special variabel

--- a/javascript/nyckelpiga/nyckelpiga.html
+++ b/javascript/nyckelpiga/nyckelpiga.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas></canvas>
-    <h1>Nyckelpiga</h1>
+    <div class="kontainer">
+        <canvas></canvas>
+        <div class="kolumn">
+            <h1>Nyckelpiga</h1>
+            <p id="poäng"></p>
+        </div>
+    </div>
     <script src="./nyckelpiga.js"></script>
 </body>
 </html>
